isucon/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isucon-ingress
  namespace: isucon
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: isucon.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
